# aoc

./: pyproject.toml
2015/: Day01.py  Day02.py  Day03.py  Day04.py  Day05.py  Day06.py  Day07.py  Day08.py  Day09.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day17.py  Day18.py  Day19.py  Day20.py  Day21.py  utils.py  utils.py:29BE21D0-B364-44B2-8C7E-FE5467581DAD
