[project]
name = "aoc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "shahshrey93", email = "shahshrey93@gmail.com"},
]
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "scikit-learn>=1.3.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
